test/bad/unexpected_char.veld
// BAD: unexpected character in source
model User {
  id: string
  price: $100
}

